--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "devDependencies": {
     "nuxt": "^3.3.3"
+  },
+  "dependencies": {
+    "axios": "^1.3.5",
+    "sass": "^1.61.0",
+    "vuetify": "^3.1.4"
   }
 }
