--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^4.29.1",
     "axios": "^1.3.5",
+    "lodash": "^4.17.21",
     "sass": "^1.61.0",
-    "vuetify": "^3.1.4"
+    "vuetify": "^3.1.4",
+    "vuex": "^4.1.0"
   }
 }
