--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.8",
     "@tanstack/vue-query": "^4.29.1",
     "axios": "^1.3.5",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.34",
+    "query-string": "^8.1.0",
     "sass": "^1.61.0",
     "vuetify": "^3.1.4",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "zustand": "^4.3.7"
   }
 }
