--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@tanstack/vue-query": "^4.29.1",
     "axios": "^1.3.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "pinia": "^2.0.34",
     "query-string": "^8.1.0",
     "sass": "^1.61.0",
+    "vee-validate": "^4.8.4",
     "vuetify": "^3.1.4",
     "vuex": "^4.1.0",
+    "yup": "^1.1.1",
     "zustand": "^4.3.7"
   }
 }
