--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
+    "@mdi/font": "^7.2.96",
     "@pinia/nuxt": "^0.4.8",
     "@tanstack/vue-query": "^4.29.1",
     "axios": "^1.3.5",
+    "bootstrap-icons": "^1.10.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.0.34",
