--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@tanstack/vue-query": "^4.29.1",
     "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.4",
+    "element-plus": "^2.3.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pinia": "^2.0.34",
     "query-string": "^8.1.0",
-    "sass": "^1.61.0",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "vee-validate": "^4.8.4",
     "vue-slick-carousel": "^1.0.6",
+    "vuesax": "^3.12.2",
     "vuetify": "^3.1.4",
     "vuex": "^4.1.0",
-    "yup": "^1.1.1",
-    "zustand": "^4.3.7"
+    "yup": "^1.1.1"
   }
 }
